--- a/Aufgabe-2-Sami/portfolio.html
+++ b/Aufgabe-2-Sami/portfolio.html
@@ -32,11 +32,15 @@
 <P>ANTOHER ONE</P>
 <a href="https://www.youtube.com/watch?v=ymqsPolRp-g">
     <img alt="Qries" src="dj-khaled-bb14-2017-feat-blsj-billboard-1548.jpg"
-    width="1500" height="1000">
+    width="1100" height="700">
+    
 
 
 </a>
-
+<a href="seite2.html">
+    <img alt="Bruh" src="arrow-145781_960_720.png"
+    width="700" height="400">
+</a>
 
 </body>
 </html>
