--- a/Aufgabe-2-Sami/Seite3.html
+++ b/Aufgabe-2-Sami/Seite3.html
@@ -19,7 +19,8 @@
     </br>
 
     <a href="portfolio.html">
-        <img alt="Bruh" src="arrow-145781_960_720.png">
+        <a href="portfolio.html">PORTFOLIO</a>
+        <a href="seite2.html">STECKBRIEF</a>
     </a>
 </body>
 
