--- a/Aufgabe-2-Sami/portfolio.html
+++ b/Aufgabe-2-Sami/portfolio.html
@@ -6,30 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio Sami</title>
 </head>
-<body style="background-color:whitesmoke;">
-    <h1>Portfolio</h1>
-    <h2>-Aufgabe 2-</h2>
-    <p>hier sehen wir ne Tänzerin hart am dancen sheesh</p>
-    <img src="foto1_big.jpg">
-    <P>ein weiteres Bild</P>
-    <img src="foto2.jpg">
-    <P>guess what ...noch ein Bild</P>
-    <img src="foto3.jpg">
-    <p>das wars noch nicht ..noch eins yaaay</p>
-    <img src="foto4.jpg">
+<div style="text-align:center">
+<body style="background-color:black;">
+    <h1 style="color:aliceblue">GANGSTER GRANNY</h1>
+    <h2 style="color:aliceblue">-Aufgabe 3-</h2>
+    <p style="color:aliceblue">"Who took the f#CKING Cookies?</p>
+    <p style="color:aliceblue">-CAROLINE</p>
+    <img src="DEiWpgGXgAQVP4j.jpg"width="700" height="750">
+    <P style="color:aliceblue">"I bet it was Karen"</P>
+    <p style="color:aliceblue">-LINDA-</p>
+    <img src="LnRrYf6e_400x400 (1).jpg"width="700" height="750">
+    <P style="color:aliceblue">"Somebody hold my Freaking Cat"</P>
+    <P style="color:aliceblue"></P>
+    <img src="EsM5M86XUAcvR0P.jpg"width="700" height="750">
+   
     <br>
-<h3> Ladies and gentleman...Videos</h3>
-<video src="clip2.mp4" controls></video>
-<p>another clip</p>
-<video src="clip1.mp4" controls></video>
-<p>another one</p>
-<video src ="clip3.mp4" controls></video>
-<p>antoher one ...</p>
-<video src = "clip4.mp4" controls></video>
+
 <br>
 <br>
-<h1>DJ KHAAAALED </h1>
-<P>ANTOHER ONE</P>
+<h1 style="color:aliceblue">DJ KHAAAALED </h1>
+<p style="color:aliceblue">"damn these cookies good as hell"</p>
+<P style="color:aliceblue">ANTOHER ONE</P>
 <a href="https://www.youtube.com/watch?v=ymqsPolRp-g">
     <img alt="Qries" src="dj-khaled-bb14-2017-feat-blsj-billboard-1548.jpg"
     width="1100" height="700">
@@ -37,10 +34,13 @@
 
 
 </a>
-<a href="seite2.html">
-    <img alt="Bruh" src="arrow-145781_960_720.png"
-    width="700" height="400">
-</a>
+
+<P style="color:aliceblue">INFO</P>
+<a href="seite2.html">click here</a>
+
+<P style="color:aliceblue">CONTACT</P>
+<a href="Seite3.html">click here</a>
 
 </body>
+</div>
 </html>
