--- a/Aufgabe-2-Sami/seite2.html
+++ b/Aufgabe-2-Sami/seite2.html
@@ -22,6 +22,12 @@
         <li><em>Hautfarbe:</em> Cappuccino</li>
 
       </ul>
+</br>
+</br>
+      <P>PORTFOLIO</P>
+<a href="portfolio.html">click here</a>
+<P>CONTACT</P>
+<a href="Seite3.html">click here</a>
 
 </body>
 </div>
