--- a/Aufgabe-2-Sami/seite2aufg4.html
+++ b/Aufgabe-2-Sami/seite2aufg4.html
@@ -1,16 +1,20 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet"href="style.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About me</title>
 </head>
+
 <div style="text-align:center">
-<body style="background-color: grey;">
+<header style="background-color: grey;">
     <h1>SAMI DELUXE </h1>
     <h2>Steckbrief</h2>
-    <a href="Seite3.html">
+</header>
+    <a href="seite3aufg4.html">
         <img alt="Bruh" src="portrait-3052641_960_720.jpg">
     </a>
     <p>Ein eindeutiges Portrait von mir</p>
@@ -22,6 +26,12 @@
         <li><em>Hautfarbe:</em> Cappuccino</li>
 
       </ul>
+</br>
+</br>
+      
+<a href="portfolio4.html">PORTFOLIO</a>
+
+<a href="seite3aufg4.html">CONTACT</a>
 
 </body>
 </div>
