--- a/aufgabe4-css/Seite3.html
+++ b/aufgabe4-css/Seite3.html
@@ -1,12 +1,10 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet"href="style.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CONTACT</title>
+    <title>Document</title>
 </head>
 <div style="text-align:center">
     <body style="background-color:whitesmoke;">
@@ -21,10 +19,11 @@
     </br>
 
     <a href="portfolio.html">
-        <a href="portfolio.html">PORTFOLIO</a>
-        <a href="seite2.html">STECKBRIEF</a>
+        <img alt="Bruh" src="arrow-145781_960_720.png">
     </a>
 </body>
-</div>
-</html>
+
+
     
+</body>
+</html>
