--- a/aufgabe4-css/seite3aufg4.html
+++ b/aufgabe4-css/seite3aufg4.html
@@ -21,8 +21,8 @@
     </br>
 
     <a href="portfolio.html">
-        <a href="portfolio.html">PORTFOLIO</a>
-        <a href="seite2.html">STECKBRIEF</a>
+        <a href="portfolio4.html">PORTFOLIO</a>
+        <a href="seite2aufg4.html">STECKBRIEF</a>
     </a>
 </body>
 </div>
