--- a/aufgabe4-css/seite2aufg4.html
+++ b/aufgabe4-css/seite2aufg4.html
@@ -1,36 +1,70 @@
-
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet"href="style.css">
+    <link rel="stylesheet" href="style.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About me</title>
 </head>
+<header style="background-color:black;">
+    <a id="Logo"href="portfolio4.html"> <img src="logo.svg"></a>
+     <h1 style="color:aliceblue">GANGSTER GRANNY</h1>
+    
+
+
+
+    <div class="nav">
+
+        <a href="seite2aufg4.html">INFO</a>
+
+        <a href="portfolio4.html">PORTFOLIO</a>
+
+        <a href="seite3aufg4.html">CONTACT</a>
+    </div>
+
+</header>
 <div style="text-align:center">
-<body style="background-color: grey;">
-    <h1>SAMI DELUXE </h1>
-    <h2>Steckbrief</h2>
-    <a href="Seite3.html">
-        <img alt="Bruh" src="portrait-3052641_960_720.jpg">
-    </a>
-    <p>Ein eindeutiges Portrait von mir</p>
-    <ul>
-        <li><em>Alter:</em> 20</li>
-        <li><em>Geburtstag:</em> 04.02.2002</li>
-        <li><em>Größe:</em> 181 cm</li>
-        <li><em>Lieblingsfarbe:</em> blau</li>
-        <li><em>Hautfarbe:</em> Cappuccino</li>
+   
+    <body style="background-color: grey;">
+        <h2>SAMI DELUXE </h2>
+        <h3>Steckbrief</h3>
+        <a href="Seite3.html">
+            <img alt="Bruh" src="portrait-3052641_960_720.jpg">
+        </a>
+        <p>Ein eindeutiges Portrait von mir</p>
+        <ul>
+            <li><em>Alter:</em> 20</li>
+            <li><em>Geburtstag:</em> 04.02.2002</li>
+            <li><em>Größe:</em> 181 cm</li>
+            <li><em>Lieblingsfarbe:</em> blau</li>
+            <li><em>Hautfarbe:</em> Cappuccino</li>
 
-      </ul>
-</br>
-</br>
-      <P>PORTFOLIO</P>
-<a href="portfolio4.html">click here</a>
-<P>CONTACT</P>
-<a href="seite3aufg4.html">click here</a>
+        </ul>
 
-</body>
+
+    </body>
+    <footer>
+       
+        <table style="width:100%">
+        <tr>
+            <th>EIA 1</th>
+            <th>Social media</th>
+            <th class="tres">Copyright Sami Bouguila </th>
+        </tr>
+        <tr>
+            <td>Römerstraße 35<br>72336 Balingen<br>074339976329</td>
+            <td>
+                <img src="icon_insta.svg" width="70px">
+                <img src="icon_linkedin.svg" width="70px">
+                <img src="icon_youtube.svg" width="70px">
+            </td>
+        </tr>
+    </table>
+    </div>
+
+</footer>
 </div>
+
 </html>
