--- a/aufgabe4-css/seite3aufg4.html
+++ b/aufgabe4-css/seite3aufg4.html
@@ -1,30 +1,66 @@
-
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet"href="style.css">
+    <link rel="stylesheet" href="style.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CONTACT</title>
 </head>
-<div style="text-align:center">
-    <body style="background-color:whitesmoke;">
-    <h1>CONTACTS</h1>
-<img src="R.jfif"  width="900" height="900">
-<p>FACEBOOK</p>
-<img src="R.png"  width="900" height="900">
-<p>INSTAGRAM</p>
-<img src="gmaillogo004-3500645d4c9bac7613b651d9a3108323-1200x800.jpg"  width="900" height="900">
-<P>GMAIL</P>
+<header style="background-color:grey;">
+     <a id="Logo"href="portfolio4.html"> <img src="logo.svg"></a>
+     <h1 style="color:aliceblue">GANGSTER GRANNY</h1>
+    <div style="text-align:center"></div>
+   
 
-    </br>
 
-    <a href="portfolio.html">
+    <div class="nav">
+
+        <a href="seite2aufg4.html">INFO</a>
+
         <a href="portfolio4.html">PORTFOLIO</a>
-        <a href="seite2aufg4.html">STECKBRIEF</a>
-    </a>
+
+        <a href="seite3aufg4.html">CONTACT</a>
+    </div>
+
+</header>
+<body>
+    <h1>Kontaktformular</h1>
+
+    <form action="https://mail.google.com/mail/u/0/#inbox">
+        <input type="name"placeholder="Name"><br><br>
+        <input type="email"placeholder="Email"><br><br>
+        <input class="message" type="message"placeholder="Your Message"><br><br>
+        <input class="button" type="submit"value="submit">
+    </form>
+</body>
+
+<footer>
+       
+    <table style="width:100%">
+    <tr>
+        <th>EIA 1</th>
+        <th>Social media</th>
+        <th class="tres">Copyright Sami Bouguila </th>
+    </tr>
+    <tr>
+        <td>Römerstraße 35<br>72336 Balingen<br>074339976329</td>
+        <td>
+            <img src="icon_insta.svg" width="70px">
+            <img src="icon_linkedin.svg" width="70px">
+            <img src="icon_youtube.svg" width="70px">
+        </td>
+    </tr>
+</table>
+</div>
+
+</footer>
+</br>
+
+
+</a>
 </body>
 </div>
+
 </html>
-    
