--- a/aufgabe4-css/seite3aufg4.html
+++ b/aufgabe4-css/seite3aufg4.html
@@ -47,9 +47,9 @@
     <tr>
         <td>Römerstraße 35<br>72336 Balingen<br>074339976329</td>
         <td>
-            <img src="icon_insta.svg" width="70px">
-            <img src="icon_linkedin.svg" width="70px">
-            <img src="icon_youtube.svg" width="70px">
+            <img class="icon" src="icon_insta.svg" width="70px">
+            <img class="icon" src="icon_linkedin.svg" width="70px">
+            <img class="icon" src="icon_youtube.svg" width="70px">
         </td>
     </tr>
 </table>
