--- a/aufgabe4-css/portfolio4.html
+++ b/aufgabe4-css/portfolio4.html
@@ -12,8 +12,7 @@
     <header style="background-color:black;">
         <a id="Logo"href="portfolio4.html"> <img src="logo.svg"></a>
         <h1 style="color:aliceblue">GANGSTER GRANNY</h1>
-
-
+      
 
         <div class="nav">
 
@@ -27,13 +26,13 @@
 
     <body style="background-color:grey;"></body>
     <p style="color:aliceblue">-CAROLINE</p>
-    <img src="DEiWpgGXgAQVP4j.jpg" width="200" height="250">
+    <img class="zoom" src="DEiWpgGXgAQVP4j.jpg" width="200" height="250">
     <P style="color:aliceblue">"I bet it was Karen"</P>
     <p style="color:aliceblue">-LINDA-</p>
-    <img src="LnRrYf6e_400x400 (1).jpg" width="200" height="250">
+    <img class="zoom" src="LnRrYf6e_400x400 (1).jpg" width="200" height="250">
     <P style="color:aliceblue">"Somebody hold my Freaking Cat"</P>
     <P style="color:aliceblue"></P>
-    <img src="EsM5M86XUAcvR0P.jpg" width="200" height="250">
+    <img class="zoom" src="EsM5M86XUAcvR0P.jpg" width="200" height="250">
 
     <br>
 
@@ -62,9 +61,9 @@
             <tr>
                 <td>Römerstraße 35<br>72336 Balingen<br>074339976329</td>
                 <td>
-                    <img src="icon_insta.svg" width="70px">
-                    <img src="icon_linkedin.svg" width="70px">
-                    <img src="icon_youtube.svg" width="70px">
+                    <img class="icon" src="icon_insta.svg" width="70px">
+                    <img class="icon" src="icon_linkedin.svg" width="70px">
+                    <img class="icon" src="icon_youtube.svg" width="70px">
                 </td>
             </tr>
             </table>
