--- a/aufgabe5-css/portfolio4.html
+++ b/aufgabe5-css/portfolio4.html
@@ -7,13 +7,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio Sami</title>
-
+<link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@600&display=swap" rel="stylesheet"> 
 </head>
+    <nav>
+        <img src="schräges banner.png">
+    </nav>
+
 <div style="text-align:center">
     <header style="background-color:black;">
         <a id="Logo" href="portfolio4.html"> <img src="logo.svg"></a>
         <h1 style="color:aliceblue">GANGSTER GRANNY</h1>
-
 
         <div class="nav">
 
@@ -24,6 +29,7 @@
 
     </header>
     <p style="color:aliceblue">"Who took the f#CKING Cookies?</p>
+
 
     <body style="background-color:grey;"></body>
     <p style="color:aliceblue">-CAROLINE</p>
@@ -36,9 +42,8 @@
     <img class="zoom" src="EsM5M86XUAcvR0P.jpg" width="200" height="250">
 
     <br>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@600&display=swap" rel="stylesheet">
+    
+
     <p>Let the Grannys fight...</p>
     <br>
     <br>
