--- a/aufgabe6-ts/L06/task_material/eu.html
+++ b/aufgabe6-ts/L06/task_material/eu.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Carbon Dioxide Emissions</title>
     <link rel="stylesheet" href="css/styles.css">
-    <script src="mytypescript.ts"></script>
+    <script src="mytypescript.js">defer</script>
 </head>
 
 <body>
