--- a/aufgabe8/drumpad.html
+++ b/aufgabe8/drumpad.html
@@ -33,7 +33,7 @@
 
         </tr>
     </table>
-    <button class="play" type="button"><img src="play-button.png"></button>
+    <button class="play" type="button"><img src="play-button.pngs"></button>
  </body>
 
 </html>
