--- a/aufgabe8/drumpad.html
+++ b/aufgabe8/drumpad.html
@@ -16,26 +16,36 @@
 <body>
     <h1>SAM DRUMPAD</h1>
 
-    <table id="button">
-        <tr>
-            <td><button class="a" type="button">A</button></td>
-            <td><button class="c" type="button">C</button></td>
-            <td><button class="f" type="button">F</button></td>
-        </tr>
-        <td><button class="d" type="button">D</button></td>
-        <td><button class="e" type="button">E</button></td>
-        <td><button class="snare" type="button">Snare</button></td>
-         <tr>
 
-            <td><button class="laugh" type="button">laugh</button></td>
-            <td><button class="kick" type="button">kick</button></td>
-            <td><button class="hihat" type="button">hihat</button></td>
-
-     
-
-        </tr>
-    </table>
-    <button class="play" type="button"><img src="play-button.pngs"></button>
+    
+    <div class="container">
+        <div id="drum-machine">
+            <div class="btn-group">
+                <div id='lib-1'>Library One</div>
+                <div id='lib-2'>Library Two</div>
+                <div id='lib-3'>Library Three</div>
+            </div>
+            <div id="display">
+                <p id='beat-name'>Click a <strong>Pad</strong> or press a <strong>Key</strong></p>
+            </div>
+            <div id="pad-container">
+               <div class='drum-pad' id='Q'></div>
+                  <div class='drum-pad' id='W'></div>
+                  <div class='drum-pad' id='E'></div>
+                  <div class='drum-pad' id='A'></div>
+                  <div class='drum-pad' id='S'></div>
+                  <div class='drum-pad' id='D'></div>
+                  <div class='drum-pad' id='Z'></div>
+                  <div class='drum-pad drum-pad-hover' id='X'></div>
+                  <div class='drum-pad drum-pad-clicked' id='C'></div>
+            </div>
+        </div>
+    </div>
+    <script src="./index.js" type="text/javascript"></script>
+</body>
+</html>
+view rawindex.html hosted with ❤
+    <button class="play-button" type="button" img src="play-button.pngs"></button>
  </body>
 
 </html>
