--- a/aufgabe8/drumpad.html
+++ b/aufgabe8/drumpad.html
@@ -36,7 +36,9 @@
         </tr>
     </table>
     <br>
+    <br>
     <button class="play-button" type="button" img src="play-button.png"></button>
+    <button class="remix-button" type="button"></button>
  </body>
 
 </html>
