--- a/aufgabe8/drumpad.html
+++ b/aufgabe8/drumpad.html
@@ -37,8 +37,10 @@
     </table>
     <br>
     <br>
-    <button class="play-button" type="button" img src="play-button.png"></button>
-    <button class="remix-button" type="button"></button>
+    
+
+    <button id="play-button" type="button"><i id="playstop" class="fas fa-play"></i></button>  
+    <button id="remix-button" type="button"><i class="fas fa-mix"></i></button>
  </body>
 
 </html>
