--- a/aufgabe8/drumpad.html
+++ b/aufgabe8/drumpad.html
@@ -39,7 +39,7 @@
     <br>
     
 
-    <button id="play-button" type="button"><i id="playstop" class="fas fa-play"></i></button>  
+    <button id="playstop-button" type="button"><i id="playstop" class="fas fa-play"></i></button>  
     <button id="remix-button" type="button"><i class="fas fa-mix"></i></button>
  </body>
 
