--- a/Aufgabe10/Aufgabe10html.html
+++ b/Aufgabe10/Aufgabe10html.html
@@ -13,9 +13,9 @@
     <div id="Divtable" class="Divtable">
         <h1>TO DO APP</h1>
         <input type="text" id="myInput" placeholder="Titel">
-        <span onclick="newElement()" class="addbutton">Add</span>
+        <span onclick="newElement()" class="addbutton">+hinzufügen</span>
         <ul id="List">
-            <li>geh ins gym</li>
+            <li><li class="checked"></li>geh ins gym</li>
             <li>geh in Vorlesungen</li>
             <li>mach Musik</li>
             <li>esse gesund</li>
